fixed wrong font display, zooming behavior and button outlines on iPhones

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap'); /*TODO: import from file */
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); */
 
-@font-face {
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap'); 
+/* TODO: import from file? */
+
+/* @font-face {
   font-family: 'Bundessans';
   src: local('Bundessans'), url(./fonts/BundesSans-Web-Regular.ttf) format('truetype');
+} */
   /* other formats include: 'woff2', 'truetype, 'opentype',
                             'embedded-opentype', and 'svg' */
-}
 
 body {
   margin: 0;
